--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -26,3 +26,46 @@ nav .nav-item {
 .navbar{
     font-family: "Abel";
 }
+
+h1, h3 {
+    font-family: "Anton";
+}
+
+.brand-name {
+    font-size: 1.5em;
+}
+
+.dot1 {
+    height: 105px;
+    width: 105px;
+    background-color: #E6563B;
+    border-radius: 50%;
+
+    display: inline-block;
+}
+.dot2 {
+    height: 105px;
+    width: 105px;
+    background-color: #EB9D3A;
+    border-radius: 50%;
+    display: inline-block;
+}
+.dot3 {
+    height: 105px;
+    width: 105px;
+    background-color: #7CB06C;
+    border-radius: 50%;
+    display: inline-block;
+}
+.dot4 {
+    height: 105px;
+    width: 105px;
+    background-color: #00ABA9;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.selected-work {
+    font-family: "Abel";
+}
+
