--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -40,32 +40,88 @@ h1, h3 {
     width: 105px;
     background-color: #E6563B;
     border-radius: 50%;
-
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Anton";
+    color: white;
+    font-size: 1.3em;
+    border: 6px solid white;
 }
+
 .dot2 {
     height: 105px;
     width: 105px;
     background-color: #EB9D3A;
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Anton";
+    color: white;
+    font-size: 1.3em;
+    border: 6px solid white;
 }
 .dot3 {
     height: 105px;
     width: 105px;
     background-color: #7CB06C;
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Anton";
+    color: white;
+    font-size: 1.3em;
+    border: 6px solid white;
 }
 .dot4 {
     height: 105px;
     width: 105px;
     background-color: #00ABA9;
     border-radius: 50%;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Anton";
+    color: white;
+    font-size: 1.3em;
+    border: 6px solid white;
 }
 
 .selected-work {
     font-family: "Abel";
 }
 
+.dot1-apple {
+    height: 18px;
+    width: 18px;
+    background-color: #E6563B;
+    border-radius: 50%;
+    display: inline-block;
+}
+.dot2-apple {
+    height: 18px;
+    width: 18px;
+    background-color: #EB9D3A;
+    border-radius: 50%;
+    display: inline-block;
+}
+.dot3-apple {
+    height: 18px;
+    width: 18px;
+    background-color: #7CB06C;
+    border-radius: 50%;
+    display: inline-block;
+}
+.dot4-apple {
+    height: 18px;
+    width: 18px;
+    background-color: #00ABA9;
+    border-radius: 50%;
+    display: inline-block;
+}
