--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -97,11 +97,8 @@ h1, h3 {
     font-family: "Abel";
 }
 
-/*.d-flex{*/
-/*    margin-top: 10px;*/
-/*}*/
 
-.dot1-apple {
+.dot1-small {
     height: 18px;
     width: 18px;
     background-color: #E6563B;
@@ -115,7 +112,7 @@ h1, h3 {
     font-size: .5em;
 
 }
-.dot2-apple {
+.dot2-small {
     height: 18px;
     width: 18px;
     background-color: #EB9D3A;
@@ -128,7 +125,7 @@ h1, h3 {
     color: black;
     font-size: .5em;
 }
-.dot3-apple {
+.dot3-small {
     height: 18px;
     width: 18px;
     background-color: #7CB06C;
@@ -141,7 +138,7 @@ h1, h3 {
     color: black;
     font-size: .5em;
 }
-.dot4-apple {
+.dot4-small {
     height: 18px;
     width: 18px;
     background-color: #00ABA9;
@@ -158,3 +155,9 @@ h1, h3 {
 h1 {
     font-size: 64px;
 }
+
+/*.img {*/
+/*    width: 100%;*/
+/*    height: 80%;*/
+/*    object-fit: cover;*/
+/*}*/
